feature: Added stylings for toggle buttons. :rabbit:

--- a/design-toolkit/components/src/tokens/themes.css
+++ b/design-toolkit/components/src/tokens/themes.css
@@ -91,6 +91,7 @@
     --fg-accent-primary-bold: var(--primitive-accent-primary-400, #39B7FA);
     --fg-accent-primary-hover: var(--primitive-accent-primary-200, #6ed1ff);
     --fg-accent-primary-pressed: var(--primitive-accent-primary-600, #0068a1);
+    --fg-hover: var(--primitive-neutral-50, #ffffff);
     --fg-info-bold: var(--primitive-utility-info-400, #888a8f);
     --fg-info-hover: var(--primitive-utility-info-200, #d5d7d9);
     --fg-info-pressed: var(--primitive-utility-info-600, #414245);
