chore: Generate tokens for updated colors. :rabbit:

--- a/design-toolkit/components/src/tokens/themes.css
+++ b/design-toolkit/components/src/tokens/themes.css
@@ -52,9 +52,9 @@
     --bg-surface-raised: var(--primitive-neutral-800, #212223);
     --bg-surface-overlay: var(--primitive-neutral-800, #212223);
     --bg-surface-muted: var(--primitive-alpha-white-100, rgba(255, 255, 255, 0.08));
-    --bg-interactive-bold: var(--primitive-neutral-100, #eff1f2);
-    --bg-interactive-bold-hover: var(--primitive-neutral-200, #d5d7d9);
-    --bg-interactive-bold-pressed: var(--primitive-neutral-400, #888a8f);
+    --bg-interactive-bold: var(--primitive-neutral-50, #ffffff);
+    --bg-interactive-bold-hover: var(--primitive-neutral-100, #eff1f2);
+    --bg-interactive-bold-pressed: var(--primitive-neutral-300, #c3c5c7);
     --bg-interactive-muted: var(--primitive-neutral-700, #2f2f31);
     --bg-interactive-muted-hover: var(--primitive-neutral-600, #414245);
     --bg-interactive-muted-pressed: var(--primitive-neutral-950, #000000);
@@ -134,8 +134,8 @@
     --outline-critical-hover: var(--primitive-utility-critical-300, #ff6d68);
     --outline-critical-pressed: var(--primitive-utility-critical-600, #a10701);
     --outline-mono-bold: var(--primitive-neutral-50, #ffffff);
-    --outline-mono-hover: var(--primitive-neutral-100, #eff1f2);
-    --outline-mono-pressed: var(--primitive-neutral-300, #c3c5c7);
+    --outline-mono-bold-hover: var(--primitive-neutral-100, #eff1f2);
+    --outline-mono-bold-pressed: var(--primitive-neutral-300, #c3c5c7);
     --shadow-elevation-raised: var(--shadow-elevation-raised-bold, 0 1px 4px 0 rgba(0 0 0 / 0.80));
     --shadow-elevation-overlay: var(--shadow-elevation-overlay-bold, 0 8px 24px 0 rgba(0 0 0 / 0.80));
     }
@@ -228,8 +228,8 @@
     --outline-critical-hover: var(--primitive-utility-critical-600, #a10701);
     --outline-critical-pressed: var(--primitive-utility-critical-500, #d40b04);
     --outline-mono-bold: var(--primitive-neutral-900, #151517);
-    --outline-mono-hover: var(--primitive-neutral-700, #2f2f31);
-    --outline-mono-pressed: var(--primitive-neutral-600, #414245);
+    --outline-mono-bold-hover: var(--primitive-neutral-700, #2f2f31);
+    --outline-mono-bold-pressed: var(--primitive-neutral-600, #414245);
     --shadow-elevation-raised: var(--shadow-elevation-raised-muted, 0 1px 4px 0 rgba(0 0 0 / 0.16));
     --shadow-elevation-overlay: var(--shadow-elevation-overlay-muted, 0 8px 24px 0 rgba(0 0 0 / 0.16));
     }
@@ -865,12 +865,12 @@
  outline-color: var(--outline-mono-bold);
 }
 
-@utility outline-mono-hover {
- outline-color: var(--outline-mono-hover);
+@utility outline-mono-bold-hover {
+ outline-color: var(--outline-mono-bold-hover);
 }
 
-@utility outline-mono-pressed {
- outline-color: var(--outline-mono-pressed);
+@utility outline-mono-bold-pressed {
+ outline-color: var(--outline-mono-bold-pressed);
 }
 
 @utility shadow-elevation-raised {
