fix: export Mode type (#491)
* fix: export Mode type

* chore: add changeset

* fix: add default bg and fg colors

* fix: improve naming

* feat: move apply styles to html

* fix: fix changeset description

* fix: move font to html tag

--- a/design-toolkit/components/src/index.css
+++ b/design-toolkit/components/src/index.css
@@ -164,7 +164,9 @@
   --icon-color: --value(--color- *);
 }
 
-body {
+html {
+  @apply bg-surface-default;
+  @apply fg-primary-bold;
   @apply font-primary;
 }
 
