fix: update storybook setup to get dtk working

--- a/packages/map-toolkit/.storybook/index.css
+++ b/packages/map-toolkit/.storybook/index.css
@@ -10,8 +10,8 @@
  * governing permissions and limitations under the License.
  */
 
-@import "tailwindcss";
-
+@import "@accelint/design-toolkit/styles";
+@source "../node_modules/@accelint/design-toolkit";
 html {
   overflow: hidden;
 }
