chore: refresh syncpack update config file and versions (#477)
* chore: fix ntds; missing defs in index.ts for some reason.

* chore: node 22 for @accelint/docs

* chore: linting that seemed to have been missed by other MRs

* chore: updated syncpack config file. handles formatting and defines which versions of packages should be synced

* chore: enable the postinstall hook to run package formatting and mismatch fix

* chore: formatting packages only

* chore: first fix after manually changing "@babel/parser": "^7.25.8" in base package.json

* chore: handled all of the ignored packages from .syncpackrc

typescript, react*, jsdom, @types/react*, tailwind*

* chore: @types/node, @types/react*, @vanilla*, esbuild-fix-imports-plugin, zod @types/node

* chore: vitest,

* chore: tsx

* chore: react-querybuilder 8.10.1

* chore: a few patch version lockfile changes

* chore: changeset file

--- a/design-toolkit/components/src/tokens/themes.css
+++ b/design-toolkit/components/src/tokens/themes.css
@@ -185,7 +185,7 @@
     --fg-inverse-muted: var(--primitive-neutral-400, #888a8f);
     --fg-disabled: var(--primitive-neutral-300, #c3c5c7);
     --fg-accent-primary-bold: var(--primitive-accent-primary-300, #39b7fa);
-    --fg-accent-primary-hover: var(--primitive-accent-primary-200, #6ed1ff);
+    --fg-accent-primary-hover: var(--primitive-accent-primary-700, #004f7e);
     --fg-accent-primary-pressed: var(--primitive-accent-primary-600, #0068a1);
     --fg-info-bold: var(--primitive-utility-info-600, #414245);
     --fg-info-hover: var(--primitive-utility-info-700, #38393A);
